update travisCI to use quick task and update supported ruby environments

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ notifications:
     on_success: change
     on_failure: always
 script:
-- bundle exec rake default
+- bundle exec rake quick
 - gem build sensu-plugins-twitter.gemspec
 - gem install sensu-plugins-twitter-*.gem
 deploy:
@@ -27,9 +27,7 @@ deploy:
   on:
     tags: true
     all_branches: true
-    rvm: 2.0
-    rvm: 2.1
-    rvm: 2.2
     rmv: 2.3.0
     rvm: 2.4.1
+    rvm: 2.5.1
     repo: sensu-plugins/sensu-plugins-twitter
