--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,3 +1,8 @@
+AllCops:
+  TargetRubyVersion: 2.3
+
+BlockLength:
+  Max: 40
 
 MethodLength:
   Max: 200
@@ -28,3 +33,11 @@ RegexpLiteral:
 
 Style/Documentation:
   Enabled: false
+
+Layout/AlignHash:
+  EnforcedHashRocketStyle: table 
+
+Style/FrozenStringLiteralComment:
+  Enabled: false
+
+
